# cmake-ts

./: .eslintrc.json  .gitignore  .gitmodules  .npmrc  .prettierignore  README.md  babel.config.mts  biome.jsonc  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.cjs.json  tsconfig.json  tsconfig.mjs.json  tsconfig.tsbuildinfo  turbo.json  vite.config.mts  vitest.config.mts
.github/workflows/: CI.yml  CacheClean.yml
example/: CMakeLists.txt
patches/: zeromq.patch
src/: args.ts  argumentBuilder.ts  build.ts  buildMode.ts  config-types.d.ts  config.ts  download.ts  generator.ts  lib.d.mts  lib.ts  libc.ts  loader.ts  locateNAN.ts  locatePackage.ts  logger.ts  main.ts  manifest.ts  modules.d.ts  nodeAPIInclude.ts  override.ts  runtimeDistribution.ts  tsconfig.json  types.d.ts  urlRegistry.ts  util.ts  vcvarsall.ts
src/nodeAPIInclude/: getRequire.js  index.ts  resolve.ts  search.ts
src/types/: cypress__request.d.ts
src/utils/: download.ts  env.ts  exec.ts  fs.ts  logger.ts  retry.ts
test/: args.test.ts  config.test.ts  download.test.ts  env.test.ts  fs.test.ts  logger.test.ts  package-lock.json  package.json  retry.test.ts  setup.ts  zeromq.test.ts  zeromq.ts
test/patches/: zeromq+6.4.1.patch  zeromq+6.4.2.patch
